# piaggio

./: LICENSE  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: push.yml
src/: args.py  clean.py  embeddings.py  main.py  plot.py  processing.py
