[project]
name = "video-scene-clustering"
version = "0.1.0"
description = "A clustering algorithm example for de-duplicating near exact images in videos using vector embeddings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse==1.4.0",
    "clip",
    "matplotlib==3.10.0",
    "numpy==2.2.3",
    "opencv-python>=4.11.0.86",
    "scenedetect[opencv]>=0.6.5.2",
    "scikit-learn==1.6.1",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
